<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="189dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:drawableRight="@mipmap/meteo"
        android:gravity="center"
        android:text="@string/meteo"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="406dp"
        android:layout_height="668dp"
        android:columnCount="2"
        android:rowCount="6"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/date"
            android:textSize="17dp"
            android:textStyle="bold"
            />

        <DatePicker
            android:layout_width="213dp"
            android:layout_height="205dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/time"
            android:textStyle="bold"
            android:textSize="17dp" />


        <TimePicker
            android:layout_width="204dp"
            android:layout_height="94dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Température en °C :"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textSize="17dp" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Vitesse de vent (Km/h):"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textSize="17dp" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="Etat du ciel :"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textSize="17dp" />

        <RadioGroup>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spinner" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degage" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/couvert" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/pluvieux" />
        </RadioGroup>

        <Button
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/valider"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/annuler"
            android:textSize="20dp"
            android:textStyle="bold" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>